[package]
edition = "2021"
name = "mc_bedrock_tools"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.4", features = ["cargo", "derive"]}
lazy_static = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
regex = "1.10.1"
tar = "0.4.40"

[[bin]]
name = "backup"
test = false

[[bin]]
name = "player_watcher"
test = false
